--- a/css/todo.css
+++ b/css/todo.css
@@ -84,7 +84,7 @@ button{
 
     line-height: 1.4em;
     width: 550px;
-    height: 400px;
+    /*    height: 400px;*/
     margin: 0 auto;
     background: #fff;
     background: rgba(255, 255, 255, 0.9);
@@ -161,10 +161,12 @@ button{
     list-style: none;
 }
 .content .content-left-part{
-    width: 50px;
-    height: 315px;
-    border-right: 1px solid rgb(166, 206, 238);
-    float: left;
+    background-image: url("../img/vertical-line.png");
+    position: absolute;
+    left: 50px;
+    width: 1px;
+    height: 92%;
+    top: 17px;
 }
 .content .todo-list li{
     position: relative;
@@ -191,6 +193,12 @@ button{
     font-size: 20px;
     color: #d9d9d9;
     text-shadow: 0 -1px 0 #bfbfbf;
+}
+.content .todo-list li .toggle:checked:after{
+    color: rgb(5, 167, 63);
+    text-shadow: 0 1px 0 rgb(67, 94, 89);
+    bottom: 1px;
+    position: relative;
 }
 .content .todo-list li label{
     word-break: break-word;
